# secugen_windows_flutter

./: .metadata  README.md  pubspec.yaml
example/: README.md  pubspec.yaml
example/integration_test/: plugin_integration_test.dart
example/lib/: main.dart
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/runner/: Runner.rc  main.cpp
lib/: secugen_windows.dart
test/: secugen_windows_method_channel_test.dart  secugen_windows_test.dart
windows/: CMakeLists.txt  secugen_windows_plugin.cpp
windows/include/secugen_windows/: secugen_windows_plugin.h
windows/test/: secugen_windows_plugin_test.cpp
